force-app/main/default/objects/col_Project__c/fields/col_SHSPIProductLineExpert__c.field-meta.xml
<CustomField>
    <fullName>SHSPIProductLineExpert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SHS PI / Product Line Expert</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (SHS PI / Product Line Expert)</relationshipLabel>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>