force-app/main/default/objects/col_Project__c/fields/col_SiemensLocalEntity__c.field-meta.xml
<CustomField>
    <fullName>col_SiemensLocalEntity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contracting Siemens entity. It will be copied to the related AccountProjectRelationship__c project after editing it here.</description>
    <label>Siemens Local Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Siemens Healthineers</value>
        </filterItems>
        <filterItems>
            <field>Account.SHS_Account_status__c</field>
            <operation>notEqual</operation>
            <value>Obsolete</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Siemens Entity)</relationshipLabel>
    <relationshipName>col_ProjectsFromSiemens</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>