force-app/main/default/objects/col_Project__c/fields/col_SponsorOfCollaboration__c.field-meta.xml
<CustomField>
    <fullName>col_SponsorOfCollaboration__c</fullName>
    <description>Which entity types sponsors the collaboration</description>
    <inlineHelpText>Who takes the legal responsibility for the initiation, management, and/or financing of the research project?</inlineHelpText>
    <label>Sponsor of Collaboration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SHS</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>