force-app/main/default/objects/col_Project__c/fields/col_StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <defaultValue>&quot;InDefinition&quot;</defaultValue>
    <description>The name of the different Project Stages.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProjectStage</valueSetName>
    </valueSet>
</CustomField>