force-app/main/default/objects/col_Project__c/fields/col_StrategicClinicalField__c.field-meta.xml
<CustomField>
    <fullName>col_StrategicClinicalField__c</fullName>
    <description>Indicates the strategic/clinical field of the project</description>
    <inlineHelpText>ClC = Clinical Conditions</inlineHelpText>
    <label>Strategic/Clinical Field</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>col_StrategicClinicalField</valueSetName>
    </valueSet>
</CustomField>