force-app/main/default/objects/col_Project__c/fields/col_T_Amendment_History__c.field-meta.xml
<CustomField>
    <fullName>col_T_Amendment_History__c</fullName>
    <description>Contains the modifications in the current amendment process on the col_Project object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>(T) Amendment History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>