force-app/main/default/objects/col_Project__c/fields/col_T_Approval_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>T_Approval_Version_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Technical field. Used to track the actual version of the approval related to this project.</description>
    <label>(T) Approval Version Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>