force-app/main/default/objects/col_Project__c/fields/col_T_ComplianceApprovalVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>col_T_ComplianceApprovalVersionNumber__c</fullName>
    <label>(T) Compliance Approval Version Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>