force-app/main/default/objects/col_Project__c/fields/col_Tender__c.field-meta.xml
<CustomField>
    <fullName>col_Tender__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Project supported by Tender?</description>
    <label>Tender?</label>
    <type>Checkbox</type>
</CustomField>