force-app/main/default/objects/col_Project__c/fields/col_testX__c.field-meta.xml
<CustomField>
    <fullName>col_testX__c</fullName>
    <formula>Text( col_ContractType__c )</formula>
    <label>testX</label>
    <type>Text</type>
</CustomField>