force-app/main/default/objects/col_Project__c/fields/col_TotalAgreementValue__c.field-meta.xml
<CustomField>
    <fullName>col_TotalAgreementValue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Roll-up figure of SHS Deliverable Value from the related SHS Deliverable records. The field rolls-up, however, the user can manually modify its value, as agreed with SHS. When the Project record has changes in the related Deliverables, the value of this field will again contain the rolled-up figures.</description>
    <inlineHelpText>Summary value of the SHS Deliverable Values in the related SHS Deliverable records. It summarises the amount which SHS will pay out to the partner.</inlineHelpText>
    <label>Total Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>