force-app/main/default/objects/col_Project__c/fields/col_TotalDelValue__c.field-meta.xml
<CustomField>
    <fullName>col_TotalDelValue__c</fullName>
    <description>Total value SHS brings into the project. Rule is that 
col_TotalDelValue + col_TotalInternalCost__c = col_TotalPartnerDelValue. To Be Verified by Sibylle.</description>
    <inlineHelpText>The summarised currency value of the SHS Deliverables.</inlineHelpText>
    <label>Total SHS Deliverable Value</label>
    <summarizedField>col_ProjectLineItem__c.col_SHSDeliverableValue__c</summarizedField>
    <summaryForeignKey>col_ProjectLineItem__c.col_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>