force-app/main/default/objects/col_Project__c/fields/col_TotalInternalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalInternalCost__c</fullName>
    <description>Rollup summary of Project Line Items&apos; Internal Cost figures</description>
    <inlineHelpText>The summarised currency value of the SHS Internal Cost Deliverables</inlineHelpText>
    <label>Total Internal Cost</label>
    <summarizedField>ProjectLineItem__c.InternalCost__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>