force-app/main/default/objects/col_Project__c/fields/col_TotalPartnerDelValue__c.field-meta.xml
<CustomField>
    <fullName>TotalPartnerDelValue__c</fullName>
    <description>The summarised value of what the partner brings in. This will be invoiced by the partner towards SHS.</description>
    <inlineHelpText>The summarised currency value of the Partner&apos;s Deliverables.</inlineHelpText>
    <label>Total Partner Deliverable Value</label>
    <summarizedField>ProjectLineItem__c.PartnerDeliverableValue__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>