force-app/main/default/objects/col_Project__c/fields/col_WasRunning__c.field-meta.xml
<CustomField>
    <fullName>col_WasRunning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden Checkbox field, True when Project was in Stage Running at least once.</description>
    <label>WasRunning</label>
    <type>Checkbox</type>
</CustomField>