force-app/main/default/objects/col_Project__c/fields/col_WhoProposedCollaboration__c.field-meta.xml
<CustomField>
    <fullName>WhoProposedCollaboration__c</fullName>
    <description>Who has originally proposed the Collaboration project</description>
    <inlineHelpText>Who has originally proposed the Collaboration project?</inlineHelpText>
    <label>Who Proposed Collaboration?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SHS</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>SHS + Partner</fullName>
            </value>
            <value>
                <fullName>SHA + Partner</fullName>
                <isActive>false</isActive>
                <label>SHA + Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>