force-app/main/default/objects/col_Project__c/fields/col_WillHumanSubjectsBeInvolved__c.field-meta.xml
<CustomField>
    <fullName>col_WillHumanSubjectsBeInvolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to document if a human subjects are involved (Regulatory Approval)</description>
    <label>Will Human Subjects Be Involved?</label>
    <type>Checkbox</type>
</CustomField>