force-app/main/default/objects/col_Project__c/fields/col_XBLProject__c.field-meta.xml
<CustomField>
    <fullName>XBLProject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to flag projects that are managed across different Business Lines</description>
    <label>X-BL Project</label>
    <type>Checkbox</type>
</CustomField>