force-app/main/default/objects/col_Project__c/fields/col_ZeroValueProject__c.field-meta.xml
<CustomField>
    <fullName>ZeroValueProject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Project without budget. Project Approval optional.</description>
    <inlineHelpText>Please check this box, if your Project is a zero value project. The Project Approval could be optional.</inlineHelpText>
    <label>Zero-Value Project</label>
    <type>Checkbox</type>
</CustomField>