force-app/main/default/objects/col_Project__c/recordTypes/col_Collaborations.recordType-meta.xml
<RecordType>
    <fullName>Collaborations</fullName>
    <active>true</active>
    <description>Matching Record type with the CLMA Agreement&apos;s Collaborations Record Type</description>
    <label>Collaborations</label>
</RecordType>