force-app/main/default/objects/col_Project__c/validationRules/col_AmendmentStatusCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>AmendmentStatusCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(AmendmentStatus__c,&quot;In Amendment&quot;),
NOT(ISPICKVAL(StageName__c,&quot;Running&quot;)))</errorConditionFormula>
    <errorMessage>Please finish the Amendment before you move to the next or previous stage.</errorMessage>
</ValidationRule>