force-app/main/default/objects/col_Project__c/validationRules/col_ContractTypeRestrictions.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractTypeRestrictions</fullName>
    <active>true</active>
    <description>After the Project Approval Stage and in the case, that the Project approval was not required because of an specific contract type it should not be allowed to change the Contract Type to a value which requires a Project Approval.</description>
    <errorConditionFormula>AND (
      NOT( ISPICKVAL(StageName__c, &quot;InDefinition&quot;)),
      NOT( ISPICKVAL(StageName__c, &quot;ProjectApproval&quot;)),
      ISCHANGED(ContractType__c),
      NOT( ISPICKVAL(ProjectApproval__c, &quot;Approved&quot;)),
      NOT (
            OR(
                ISPICKVAL(ContractType__c, &quot;C2P&quot;),
                ISPICKVAL(ContractType__c, &quot;DP&quot;),
                ISPICKVAL(ContractType__c, &quot;LOI&quot;),
                ISPICKVAL(ContractType__c, &quot;MRA&quot;),
                ISPICKVAL(ContractType__c, &quot;NDA&quot;),
                ISPICKVAL(ContractType__c, &quot;SWLIC&quot;)
               )
        )
  )</errorConditionFormula>
    <errorDisplayField>ContractType__c</errorDisplayField>
    <errorMessage>You attempted to change the Contract Type to a value that requires Project Approval. Please return to the Project Approval Stage and make this change there.</errorMessage>
</ValidationRule>