force-app/main/default/objects/col_Project__c/validationRules/col_GeneralComplianceRelease_ReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>col_GeneralComplianceRelease_ReadOnly</fullName>
    <active>true</active>
    <description>Once the Compliance Approval is set to &apos;Approved&apos;, the General Compliance Release is read only.</description>
    <errorConditionFormula>ISPICKVAL(col_ComplianceApproval__c, &quot;Approved&quot;) &amp;&amp;  ISCHANGED( col_GeneralComplianceReleaseapplies__c)</errorConditionFormula>
    <errorDisplayField>col_GeneralComplianceReleaseapplies__c</errorDisplayField>
    <errorMessage>You cannot modify the General Compliance Release applies field once the Compliance Approval is set to &apos;Approved&apos;.</errorMessage>
</ValidationRule>