force-app/main/default/objects/col_Project__c/validationRules/col_OnlyNumericValuesToBeUsed.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyNumericValuesToBeUsed</fullName>
    <active>true</active>
    <description>Ensure that only numeric values are entered in certain text fields (currently used for only PO Number)</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PONumber__c)),
    NOT(ISNUMBER(PONumber__c))
)</errorConditionFormula>
    <errorDisplayField>PONumber__c</errorDisplayField>
    <errorMessage>Please make sure to enter only numbers in this field</errorMessage>
</ValidationRule>