force-app/main/default/objects/col_Project__c/listViews/detailed.listView-meta.xml
<ListView>
    <fullName>detailed</fullName>
    <columns>ProjectIdText__c</columns>
    <columns>NAME</columns>
    <columns>ContractingParty__c</columns>
    <columns>StageName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>HQCollaborationManager__c</columns>
    <columns>RUCollaborationManager__c</columns>
    <columns>PrimaryOrgUnit__c</columns>
    <columns>SecondaryOrgUnit__c</columns>
    <columns>ProjectApproval__c</columns>
    <columns>ShortDescription__c</columns>
    <filterScope>Everything</filterScope>
    <label>detailed</label>
</ListView>