force-app/main/default/objects/col_Project__c/listViews/fraunhofer_projects.listView-meta.xml
<ListView>
    <fullName>fraunhofer_projects</fullName>
    <columns>ProjectID__c</columns>
    <columns>NAME</columns>
    <columns>ContractingParty__c</columns>
    <columns>StageName__c</columns>
    <columns>ProjectBudget__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>HQCollaborationManager__c</columns>
    <columns>RUCollaborationManager__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ContractingParty__c</field>
        <operation>equals</operation>
        <value>Fraunhofer Gesundheit</value>
    </filters>
    <label>fraunhofer projects</label>
</ListView>